welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(c:Color) 
{setCouleurBrosse()
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	avance()
	leveBrosse()
	setCouleurBrosse(Color.yellow )
	baisseBrosse()
	leveBrosse()
	gauche()
}

growFlowers()